project(lab4)

set(CMAKE_BUILD_TYPE Debug)

add_executable(${PROJECT_NAME} lab4.cpp completarPalabras.cpp controlador_cursos.cpp controlador_usuarios.cpp curso.cpp dt_completar_palabras.cpp dt_curso.cpp dt_ejercicio.cpp dt_est_curso.cpp dt_est_estudiante.cpp dt_est_profesor.cpp dt_estudiante.cpp dt_fecha.cpp dt_idioma.cpp dt_leccion.cpp dt_notificacion.cpp dt_profesor.cpp dt_traduccion.cpp dt_usuario.cpp ejercicio.cpp estudiante.cpp fabrica.cpp idioma.cpp inscripcion.cpp leccion.cpp notificacion.cpp profesor.cpp traduccion.cpp usuario.cpp) # Aca se ponen los archivos .cpp
